Add detailed calculus differentiation refresher
Expanded 'exam 2.md' with comprehensive notes on differentiation rules, examples, and quiz problems with solutions. Updated Obsidian workspace to open 'exam 2.md' and adjusted UI settings for improved navigation.

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "readableLineLength": true,
+  "readableLineLength": false,
   "spellcheck": false,
   "vimMode": true,
   "autoPairBrackets": false,
