--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "readableLineLength": false,
+  "readableLineLength": true,
   "spellcheck": false,
   "vimMode": true,
   "autoPairBrackets": false,
