Update Obsidian app, appearance, and workspace settings
Enabled readable line length and set trash option to local in app.json. Added theme setting in appearance.json. Updated active file and lastOpenFiles order in workspace.json.

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,9 +1,10 @@
 {
-  "readableLineLength": false,
+  "readableLineLength": true,
   "spellcheck": false,
   "vimMode": true,
   "autoPairBrackets": true,
   "autoPairMarkdown": true,
   "smartIndentList": true,
-  "useTab": true
+  "useTab": true,
+  "trashOption": "local"
 }
